--- a/templates/dashboard/index.html
+++ b/templates/dashboard/index.html
@@ -11,6 +11,7 @@
 	<link rel="canonical" href="https://demo-basic.adminkit.io/" />
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
 		integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+		<script src="/static/js/javascript.js"></script>
 	<title>USAT - {% block titulo %}{% endblock %}</title>
 
 	<link href="{{ url_for('static', filename='dashboard/css/app.css') }}" rel="stylesheet">
@@ -175,15 +176,15 @@
 								<a class="nav-link dropdown-toggle d-none d-sm-inline-block" href="#"
 									data-bs-toggle="dropdown">
 
-									<img id="github-profile-pic" src="static/img/{{foto}}"
-										class="avatar img-fluid rounded me-1" alt="foto" />
-									<span id="usernamenav" class="text-dark">{{primer_nombre}}</span>
+									<img id="github-profile-pic" src="static/img/{{foto_perfil}}"
+										class="avatar img-fluid rounded me-1" alt="foto_perfil" />
+									<span id="usernamenav" class="text-dark">{{usuario}}</span>
 								</a>
 								<div class="dropdown-menu dropdown-menu-end">
 									<a class="dropdown-item" href="pages-profile.html"><i class="align-middle me-1"
 											data-feather="user"></i> Perfil</a>
 									<div class="dropdown-divider"></div>
-									<a class="dropdown-item" href="{{url_for('logout')}}">Cerrar Sesión</a>
+									<a class="dropdown-item" id="btnCerrarSesion" onclick="cerrarSesion()">Cerrar Sesión</a>
 								</div>
 							</li>
 						</ul>
@@ -245,9 +246,21 @@
 
 
 </body>
+<script src="{{ url_for('static', filename='login/libs/sweetalert2/sweetalert2.js') }}"></script>
 <!-- Script para mostrar la pantalla de carga al hacer clic en los enlaces de la barra lateral -->
 <script>
+	document.getElementById("github-profile-pic").src = "static/img/"+localStorage.getItem("f")||"static/img/"+sessionStorage.getItem("f");
+	document.getElementById("usernamenav").textContent = localStorage.getItem("n")||sessionStorage.getItem("n");
+	
 	document.addEventListener("DOMContentLoaded", function () {
+
+		const login_username = localStorage.getItem('username') !== null || sessionStorage.getItem('username') !== null;
+		const login_token = localStorage.getItem('token') !== null || sessionStorage.getItem('token') !== null;
+
+		if (!login_username && !login_token){
+			validar_sesion()
+		}
+
 		// Selecciona todos los elementos con la clase 'sidebar-link'
 		var sidebarLinks = document.querySelectorAll(".sidebar-link");
 
@@ -258,7 +271,62 @@
 				document.getElementById("loader").style.display = "block";
 			});
 		});
+		
 	});
+
+	function mostrarAlerta(icon, title, text) {
+            Swal.fire({
+                icon: icon,
+                title: title,
+                text: text
+            });
+        }
+    
+	function validar_sesion(){
+		username = localStorage.getItem('username');
+		token = localStorage.getItem('token');
+
+		if (!username || !token) {
+			username = sessionStorage.getItem('username');
+			token = sessionStorage.getItem('token');
+		}
+
+		if (!username || !token){
+			//mostrarAlerta("warning","No se pudo cargar la página","No hay una sesión activa, por favor vuelva a acceder al sistema")
+			window.location.href = '/login';
+
+		}else{
+			fetch('/validar_sesion', {
+				method: 'POST',
+				headers: {
+					'Content-type':'application/json'
+				},
+				body: JSON.stringify({
+					username:username,
+					token:token,
+				})
+				})
+				.then(response => response.json())
+				.then(data =>{
+					if (data.logeo){
+
+					}else{
+						//mostrarAlerta("warning","No se pudo cargar la página",data.alerta)
+						window.location.href = '/login';
+					}
+				})
+				.catch(error=>{
+					//mostrarAlerta("error","Error al cargar la página",error)
+					window.location.href = '/login';
+				});	
+		}
+	}
+
+	function cerrarSesion(){
+		localStorage.clear();
+		sessionStorage.clear();
+		window.location.href = '/login';
+	}
 </script>
 
 </html>
